actionRegister api
